# Lucy

./: .gitignore  Lucy.yaml  README.md  lucygui.py  main.py  requirements.txt  setup.cfg  setup.py
functions/: functions.py  speak.py  takeCommand.py  wishMe.py
gui/: lucygui.py
lucy/: main.py
lucy/appOpens/: __init__.py  functions.py  openCode.py  openDiscord.py  openSpotify.py
lucy/gui/: lucygui.ui
lucy/osCommands/: volumeUp.py
lucy/test/: alarm_test.py  test.py
lucy/web/: __init__.py  openHackerrank.py  openYoutube.py
lucy/webTasks/: __init__.py  searchGoogle.py
main/: main.py
src/: main.py
test/: alarm_test.py  datetime_type.py  timer.py  web_selenium.py
training/: intents.json
web/: functions.py  openGoogle.py  openHackerrank.py  openYoutube.py  searchGoogle.py  searchYoutube.py
web_scraping/: tut.py
