[metadata]
name= lucy 
version= 0.1.1
description= this is my own personal voice command task performer
author= Arghya Banerjee
author_email= arghya.banerjee.dev@gmail.com
license= MIT
license_file= LICENSE
url= https://github.com/Arghya-Banerjee/Lucy

[options]
package_dir= lucy
python_requires= >=3.9